Added about me section with photots of myself and my pets

--- a/index.html
+++ b/index.html
@@ -21,6 +21,25 @@
             </div>
         </div>
     </section>
+
+    <section class="about">
+        <div class="about-overlay"></div>
+        <div class="about-header">
+            <h2>About Me</h2>
+        </div>
+        <div class="about-content">
+            <div class="photo-stack">
+                <div class="photo-circle circle-me" data-depth="16" aria-label="Me"></div>
+                <div class="photo-circle circle-dog" data-depth="10" aria-label="Dog"></div>
+                <div class="photo-circle circle-cat" data-depth="12" aria-label="Cat"></div>
+            </div>
+            <div class="about-text">
+                <p class="placeholder">
+                    heellow world
+                </p>
+            </div>
+        </div>
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
