--- a/index.html
+++ b/index.html
@@ -40,6 +40,31 @@
             </div>
         </div>
     </section>
+
+    <section class="projects">
+        <div class="projects-header">
+            <h2>Projects</h2>
+        </div>
+        <div class="projects-container">
+            <a href="project-1.html" class="project-card" data-index="0">
+                <div class="project-thumbnail" style="background-image: url('photos/background.jpg');"></div>
+                <div class="project-title">Project 1</div>
+            </a>
+            <a href="project-2.html" class="project-card" data-index="1">
+                <div class="project-thumbnail" style="background-image: url('photos/background.jpg');"></div>
+                <div class="project-title">Project 2</div>
+            </a>
+            <a href="project-3.html" class="project-card" data-index="2">
+                <div class="project-thumbnail" style="background-image: url('photos/background.jpg');"></div>
+                <div class="project-title">Project 3</div>
+            </a>
+            <a href="project-4.html" class="project-card" data-index="3">
+                <div class="project-thumbnail" style="background-image: url('photos/background.jpg');"></div>
+                <div class="project-title">Project 4</div>
+            </a>
+        </div>
+    </section>
+
     <script src="script.js"></script>
 </body>
 </html>
