Added more pictures of the mascot, added a project card animation for each project so that a descroption and a button to view more appears when you hover. And lastly added a get in touch section

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </section>
 
     <section class="about">
+        <img src="mascot-leaning.png" alt="Mascot Peeking" class="mascot-leaning">
         <div class="about-header">
             <h2>About Me</h2>
         </div>
@@ -74,7 +75,13 @@
                         <source src="videos/algo-vis.mp4" type="video/mp4">
                     </video>
                 </div>
-                <div class="project-title">Dev Simplified</div>
+                <div class="project-overlay">
+                    <button class="view-more-btn">View More</button>
+                </div>
+                <div class="project-info">
+                    <div class="project-title">Dev Simplified</div>
+                    <div class="project-description">Brief description goes here</div>
+                </div>
             </a>
             <a href="project-2.html" class="project-card" data-index="1">
                 <div class="project-thumbnail">
@@ -82,7 +89,13 @@
                         <source src="videos/misty.mp4" type="video/mp4">
                     </video>
                 </div>
-                <div class="project-title">Misty Robot</div>
+                <div class="project-overlay">
+                    <button class="view-more-btn">View More</button>
+                </div>
+                <div class="project-info">
+                    <div class="project-title">Misty Robot</div>
+                    <div class="project-description">Brief description goes here</div>
+                </div>
             </a>
             <a href="project-3.html" class="project-card" data-index="2">
                 <div class="project-thumbnail">
@@ -90,7 +103,13 @@
                         <source src="videos/last-stand.mp4" type="video/mp4">
                     </video>
                 </div>
-                <div class="project-title">Last Stand</div>
+                <div class="project-overlay">
+                    <button class="view-more-btn">View More</button>
+                </div>
+                <div class="project-info">
+                    <div class="project-title">Last Stand</div>
+                    <div class="project-description">Brief description goes here</div>
+                </div>
             </a>
             <a href="project-4.html" class="project-card" data-index="3">
                 <div class="project-thumbnail">
@@ -98,9 +117,40 @@
                         <source src="videos/election-vis.mp4" type="video/mp4">
                     </video>
                 </div>
-                <div class="project-title">Election Map Visualizer</div>
+                <div class="project-overlay">
+                    <button class="view-more-btn">View More</button>
+                </div>
+                <div class="project-info">
+                    <div class="project-title">Election Map Visualizer</div>
+                    <div class="project-description">Brief description goes here</div>
+                </div>
+            </a>
+            <a href="project-5.html" class="project-card" data-index="4"> 
+                <div class="project-thumbnail">
+                    <img src="mascot-confused.png" class="mascot-confused">
+                </div>
+                <div class="project-info">
+                    <div class="project-title">Under Construction</div>
+                    <div class="project-description">Brief description goes here</div>
+                </div>
             </a>
         </div>
+    </section>
+
+    <section class="contact">
+        <div class="contact-header">
+            <h2>Get In Touch</h2>
+        </div>
+        <div class="contact-description">
+            <p>
+                I'm always open to discussing new <span class="code-function">projects</span>, <span class="code-string">creative ideas</span>, or <span class="code-number">opportunities</span>!
+            </p>
+        </div>
+        <div class="contact-links">
+            <a href="mailto:bbarragancid23@uchicago.edu" class="contact-link">Email</a>
+            <a href="https://github.com/bbarragancid23" target="_blank" class="contact-link">GitHub</a>
+        </div>
+        <img src="mascot-bowing.png" alt="Mascot Bowing" class="mascot-bowing">
     </section>
 
     <script src="script.js"></script>
